2004-08-08  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-multipart-encrypted.c
	(g_mime_multipart_encrypted_encrypt): Don't set encrypted.asc as
	the filename anymore.

	* gmime/gmime-multipart-signed.c (g_mime_multipart_signed_sign):
	Added a hack for Balsa so it can support S/MIME. Also don't set
	the filename to signature.asc. Balsa maintainers don't want this
	*shrug*.
	(g_mime_multipart_signed_verify): Same. These changes really
	require a design change to CipherContext but that'll have to wait.

2004-08-04  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Changed the iconv-detect logic to not error-out on
	fail. The code can properly handle the case where iconv-detect.h
	doesn't exist, so let it do that instead.

2004-07-30  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (rfc2047_encode_get_rfc822_words): Don't use
	g_unichar_isspace() here, we only want to break 'words' on ascii
	lwsp.

2004-07-16  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime.c (g_mime_init): Make intialisation ref-counted.
	(g_mime_shutdown): Updated.

2004-07-06  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-utils.c (rfc2047_encode_get_rfc822_words): Break
	apart long words so that they we don't generate encoded-word
	tokens that are >75 chars. Fixes bug #145497.

2004-07-04  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated.

	* configure.in: Bumped the version to 2.1.7

	* gmime/gmime-parser.c (parser_construct_leaf_part): Removed code
	to check that the content_type argument is NULL - it can never be
	NULL.
	(parser_scan_multipart_face): Fixed a possible buffer-overrun.

	* gmime/gmime-object.c (process_header): Modified to call
	g_mime_object_set_content_type() if we got called with a
	Content-Type header. This way all the ::set_content_type()
	subclass methods get a chance to update the object's state.
	(process_header): Return TRUE if we've "processed" the value or
	FALSE otherwise.